[gd_scene load_steps=9 format=3 uid="uid://blgvhomctoc4m"]

[ext_resource type="PackedScene" uid="uid://cuitowbi01i4" path="res://Scenes/character.tscn" id="1_jdm0b"]
[ext_resource type="Script" path="res://Scripts/game_manager.gd" id="1_jpslc"]
[ext_resource type="Texture2D" uid="uid://b0ufoo0kvri7f" path="res://Art/Path_Tileset.png" id="2_2ra1x"]
[ext_resource type="PackedScene" uid="uid://cmogs3rwo1l87" path="res://Scenes/shop.tscn" id="3_yjpxp"]
[ext_resource type="PackedScene" uid="uid://dy3p3tt8hbc8u" path="res://Scenes/test.tscn" id="5_2llw5"]
[ext_resource type="Script" path="res://Scripts/changescene.gd" id="6_s75dc"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_keihr"]
texture = ExtResource("2_2ra1x")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0

[sub_resource type="TileSet" id="TileSet_lma1d"]
sources/0 = SubResource("TileSetAtlasSource_keihr")

[node name="game" type="Node2D"]
y_sort_enabled = true

[node name="GameManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_jpslc")

[node name="TileMap" type="TileMap" parent="."]
z_index = -1
tile_set = SubResource("TileSet_lma1d")
format = 2
layer_0/tile_data = PackedInt32Array(1, 196608, 5, 0, 196608, 5, 65535, 196608, 5, 65534, 196608, 5, 65533, 196608, 5, -196615, 196608, 5, -262138, 196608, 5, -196602, 196608, 5, -131066, 196608, 5, -65530, 196608, 5, 6, 196608, 5, 65542, 196608, 5, 262150, 196608, 5, 196614, 196608, 5, 131078, 196608, 5, 262149, 196608, 5, 262148, 196608, 5, 262147, 196608, 5, 262146, 196608, 5, 262145, 196608, 5, 262144, 196608, 5, 327679, 196608, 5, 327678, 196608, 5, 327677, 196608, 5, 327676, 196608, 5, 327675, 196608, 5, 327674, 196608, 5, 327673, 196608, 5, 327672, 196608, 5, -327674, 196608, 5, -327673, 196608, 5, -262137, 196608, 5, -196601, 196608, 5, -131065, 196608, 5, -65529, 196608, 5, 7, 196608, 5, 65543, 196608, 5, 131079, 196608, 5, 196615, 196608, 5, 262151, 196608, 5, 262136, 196608, 5, 196600, 196608, 5, 131064, 196608, 5, 65528, 196608, 5, -8, 196608, 5, -65544, 196608, 5, -131080, 196608, 5, -196616, 196608, 5, -262152, 196608, 5, 262141, 196608, 5, 196605, 196608, 5, 131069, 196608, 5, 131068, 196608, 5, 65532, 196608, 5, -4, 196608, 5, -65540, 196608, 5, -131076, 196608, 5, -196612, 196608, 5, -262148, 196608, 5, -262149, 196608, 5, -262150, 196608, 5, -262151, 196608, 5, -196614, 196608, 5, -131078, 196608, 5, -131079, 196608, 5, -65543, 196608, 5, -7, 196608, 5, 65529, 196608, 5, 131065, 196608, 5, 196601, 196608, 5, 262137, 196608, 5, 262138, 196608, 5, 196602, 196608, 5, 131066, 196608, 5, 65530, 196608, 5, -6, 196608, 5, -65542, 196608, 5, -65541, 196608, 5, -131077, 196608, 5, -196613, 196608, 5, -5, 196608, 5, 65531, 196608, 5, 131067, 196608, 5, 196603, 196608, 5, 262139, 196608, 5, 262140, 196608, 5, 196604, 196608, 5, -262147, 196608, 5, -196611, 196608, 5, -131075, 196608, 5, -65539, 196608, 5, -3, 196608, 5, -2, 196608, 5, -65538, 196608, 5, -131074, 196608, 5, -196610, 196608, 5, -262146, 196608, 5, -262145, 196608, 5, -196609, 196608, 5, -131073, 196608, 5, -65537, 196608, 5, -1, 196608, 5, -65536, 196608, 5, -131072, 196608, 5, -196608, 196608, 5, -262144, 196608, 5, -327680, 196608, 5, -327679, 196608, 5, -262143, 196608, 5, -196607, 196608, 5, -131071, 196608, 5, -65535, 196608, 5, -65534, 196608, 5, -131070, 196608, 5, -196606, 196608, 5, -262142, 196608, 5, -327678, 196608, 5, -327677, 196608, 5, -262141, 196608, 5, -196605, 196608, 5, -131069, 196608, 5, -65533, 196608, 5, 3, 196608, 5, 2, 196608, 5, 65538, 196608, 5, 65537, 196608, 5, 65536, 196608, 5, 131071, 196608, 5, 131070, 196608, 5, 196606, 196608, 5, 262142, 196608, 5, 262143, 196608, 5, 196607, 196608, 5, 131072, 196608, 5, 196608, 196608, 5, 196609, 196608, 5, 131073, 196608, 5, 131074, 196608, 5, 196610, 196608, 5, 196611, 196608, 5, 131075, 196608, 5, 65539, 196608, 5, 65540, 196608, 5, 4, 196608, 5, -65532, 196608, 5, -131068, 196608, 5, -196604, 196608, 5, -262140, 196608, 5, -327676, 196608, 5, -327675, 196608, 5, -262139, 196608, 5, -196603, 196608, 5, -131067, 196608, 5, -65531, 196608, 5, 5, 196608, 5, 65541, 196608, 5, 131077, 196608, 5, 131076, 196608, 5, 196612, 196608, 5, 196613, 196608, 5)

[node name="Player" parent="." instance=ExtResource("1_jdm0b")]
z_index = 1
scale = Vector2(1, 1)
metadata/_edit_group_ = true

[node name="Camera2D" type="Camera2D" parent="Player"]

[node name="Shop" parent="." instance=ExtResource("3_yjpxp")]
position = Vector2(-82, -3)
collision_mask = 2

[node name="MultiplayerHUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="MultiplayerHUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = 11.0
offset_right = 81.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MultiplayerHUD/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_group_ = true

[node name="HostGame" type="Button" parent="MultiplayerHUD/Panel/VBoxContainer"]
layout_mode = 2
text = "Host Game"
metadata/_edit_group_ = true

[node name="JoinPlayer2" type="Button" parent="MultiplayerHUD/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Join Player 2"
metadata/_edit_group_ = true

[node name="VisitLabel" type="Label" parent="."]
offset_left = -66.0
offset_top = -28.0
offset_right = -26.0
offset_bottom = -5.0
text = "visit"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Scenes/multiplayer_player.tscn")
spawn_path = NodePath("../Players")
spawn_limit = 2

[node name="Players" type="Node2D" parent="."]

[node name="Area2D" parent="." instance=ExtResource("5_2llw5")]
position = Vector2(-10, -57)

[node name="ChangeScene" type="Button" parent="."]
offset_left = -114.0
offset_top = -69.0
offset_right = -70.0
offset_bottom = -38.0
text = "c"
script = ExtResource("6_s75dc")

[connection signal="pressed" from="MultiplayerHUD/Panel/VBoxContainer/HostGame" to="GameManager" method="become_host"]
[connection signal="pressed" from="MultiplayerHUD/Panel/VBoxContainer/JoinPlayer2" to="GameManager" method="join_player_2"]
[connection signal="pressed" from="ChangeScene" to="ChangeScene" method="_on_pressed"]
